--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
     , "jade": ">= 0.0.1"
     , "mongoose" : ">= 2.5.13"
     , "underscore" : ">= 1.3.3"
+    , "connect-auth" : ">= 0.5.1"
   }
 }
