--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   , "version": "0.0.1"
   , "engines": {
     "node": "0.6.x",
-    "npm":  "1.0.x"
+    "npm":  "1.1.x"
   }
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
     , "mongoose" : ">= 2.5.13"
     , "underscore" : ">= 1.3.3"
-    , "connect-auth" : ">= 0.5.1"
+    , "everyauth" : ">= 0.2.x"
   }
 }
