--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     , "jade": ">= 0.0.1"
     , "mongoose" : ">= 2.5.13"
     , "underscore" : ">= 1.3.3"
-    , "everyauth" : ">= 0.2.x"
+    , "connect-auth" : ">= 0.5.1"
   }
 }
