--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "npm":  "1.x"
   }
   , "dependencies": {
-      "express": "3.x"
+      "express": "2.x"
     , "jade": ">= 0.0.1"
     , "mongoose" : ">= 2.5.13"
     , "underscore" : ">= 1.3.3"
+    , "connect-auth" : "latest"
   }
 }
